# ai-pipeline-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_initial.sql  002_add_pricing_version.sql
monitor/: config.py  db.py  metrics.py
