[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pipeline-monitor"
version = "0.1.0"
description = "LLM API observability: latency, cost, token tracking, and evals"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor*", "dashboard*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]